# pibackbone

./: .gitignore  AUTHORS  ChangeLog  README.md  config.txt  install.sh  requirements.txt  setup.cfg
.github/workflows/: docker.yml  pypi.yaml  semgrep.yml  test.yaml
core_services/: docker-compose.yml
core_services/s3-upload/: s3_app.py
core_services/sense/: hooks.py  test_sense_app.py
pibackbone/: __main__.py  definitions.json  main.py  pibackbone.py
services/: .env  docker-compose-cell-sim7600g-h.yml  docker-compose-compass.yml  docker-compose-core.yml  docker-compose-daisy.yml  docker-compose-environment-sensor.yml  docker-compose-freespacer.yml  docker-compose-hifiberry-dac-plus-adc-pro.yml  docker-compose-pibuoy.yml  docker-compose-pijuice.yml  docker-compose-s3-upload.yml  docker-compose-sense.yml  docker-compose-status-updater.yml
services/cell-sim7600g-h/: Dockerfile  start-modem.sh
services/compass/: Dockerfile  compass_app.py  requirements.txt  test_compass_app.py
services/daisy/: Dockerfile
services/environment-sensor/: BME280.py  Dockerfile  ICM20948.py  LTR390.py  SGP40.py  TSL2591.py  environment_app.py  requirements.txt
services/freespacer/: Dockerfile  freespacer_app.py  test_freespacer_app.py
services/hifiberry-dac-plus-adc-pro/: Dockerfile
services/pijuice/: Dockerfile  pijuice_config.JSON  power_app.py
services/s3-upload/: Dockerfile  requirements.txt  s3_app.py
services/sense/: Dockerfile  requirements.txt  sense_app.py
services/status-updater/: Dockerfile  hooks.py  (+2 more)
tests/: requirements.txt  test_pibackbone.py
