[metadata]
name = pibackbone
summary = A tool for installing the backbone pieces of any Pi-based project
license = Apache-2
author = cglewis
author-email = clewis@iqt.org
home-page = https://github.com/IQTLabs/PiBackbone
platform = any
classifier =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[entry_points]
console_scripts =
    pibackbone = pibackbone.__main__:main
